// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer with data should render correctly 1`] = `
<React.Fragment>
  <Text
    paragraphOverride={[Function]}
    text="This is a 1st paragraph block."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 2nd paragraph block."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 3rd paragraph block."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 4th paragraph block.."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 5th paragraph block."
  />
</React.Fragment>
`;

exports[`TextContainer with data with a passed previous block type should render correctly 1`] = `
<React.Fragment>
  <hr />
  <Text
    paragraphOverride={[Function]}
    text="This is a 1st paragraph block."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 2nd paragraph block."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 3rd paragraph block."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 4th paragraph block.."
  />
  <Text
    paragraphOverride={[Function]}
    text="This is a 5th paragraph block."
  />
</React.Fragment>
`;
